recursion.lessons.recursion.koch.Koch.scala.error
Koch:20: error: not found: value snowSode
		snowSode(levels-1,length);
                ^